fix dialog overflowing causing post detail to be hidden on the bottom

--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -6,10 +6,11 @@
   background: var(--theme-color-secondary-100);
   border-radius: 8px;
   max-width: 90vw;
+  max-height: 90vh;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .dialog-header {
